--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd frontend && npm run build",
-    "install-frontend": "cd ../frontend && npm install",
-    "heroku-postbuild": "cd frontend && npm install && npm run build",
-    "start": "nodemon index.js",
-    "frontend":"npm start --prefix frontend",
-    "dev":"concurrently \" npm run start\" \"npm run frontend\"",
-    "client_install": "npm install --prefix frontend"
+    "build": "cd client && npm run build",
+    "install-frontend": "cd ../client && npm install",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION = false && npm install --prefix client && npm run build --prefix client",
+    "start": "node index.js",
+    "client":"npm start --prefix client",
+    "dev":"concurrently \" npm run start\" \"npm run client\"",
+    "client_install": "npm install --prefix client"
   },
   "keywords": [],
   "author": "",
