--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cd client && npm run build",
     "install-frontend": "cd ../client && npm install",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION = false && npm install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION = false && npm install --only=dev npm install --prefix client && npm run build --prefix client",
     "start": "node index.js",
     "client":"npm start --prefix client",
     "dev":"concurrently \" npm run start\" \"npm run client\"",
